force-app/main/default/objects/Account_Product__c/fields/Convention__c.field-meta.xml
<CustomField>
    <fullName>Convention__c</fullName>
    <label>Convention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day of Week</fullName>
            </value>
            <value>
                <fullName>Day of Month</fullName>
            </value>
            <value>
                <fullName>15th / 30th</fullName>
            </value>
            <value>
                <fullName>Last Day of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>