force-app/main/default/objects/Account_Product__c/fields/Direct_Deposit_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit_Set_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Deposit Set-Up</label>
    <type>Checkbox</type>
</CustomField>