force-app/main/default/objects/Account_Product__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>15th / 30th</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>