force-app/main/default/objects/Account_Product__c/fields/Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>Owner_Office__c</fullName>
    <formula>TEXT( Owner:User.Office__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Office</label>
    <type>Text</type>
</CustomField>