force-app/main/default/objects/Account_Product__c/fields/Payroll_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>