force-app/main/default/objects/Account_Product__c/fields/Payroll_forms_received__c.field-meta.xml
<CustomField>
    <fullName>Payroll_forms_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll forms received</label>
    <type>Checkbox</type>
</CustomField>