force-app/main/default/objects/Account_Product__c/fields/Payroll_phone_consultation__c.field-meta.xml
<CustomField>
    <fullName>Payroll_phone_consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll phone consultation</label>
    <type>Checkbox</type>
</CustomField>