force-app/main/default/objects/Account_Product__c/fields/Payroll_set_up_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Payroll_set_up_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll set-up email sent</label>
    <type>Checkbox</type>
</CustomField>