force-app/main/default/objects/Account_Product__c/fields/State_Withholding_ID__c.field-meta.xml
<CustomField>
    <fullName>State_Withholding_ID__c</fullName>
    <label>State Withholding ID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>