force-app/main/default/objects/Account_Product__c/fields/State_withholding_ID_created__c.field-meta.xml
<CustomField>
    <fullName>State_withholding_ID_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State withholding ID created</label>
    <type>Checkbox</type>
</CustomField>