force-app/main/default/objects/Account_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Set-Up</fullName>
                <default>true</default>
                <label>Set-Up</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active-On Hold</fullName>
            </value>
            <value>
                <fullName>Suspended / Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>