force-app/main/default/objects/Account_Product__c/fields/Unemployment__c.field-meta.xml
<CustomField>
    <fullName>Unemployment__c</fullName>
    <label>Unemployment #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>