force-app/main/default/objects/Account_Product__c/fields/Unemployment_created__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unemployment # created</label>
    <type>Checkbox</type>
</CustomField>