force-app/main/default/objects/Account_Product__c/fields/X2016_dates__c.field-meta.xml
<CustomField>
    <fullName>X2016_dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2016 dates</label>
    <type>Checkbox</type>
</CustomField>