force-app/main/default/objects/Account_Product__c/recordTypes/Payroll.recordType-meta.xml
<RecordType>
    <fullName>Payroll</fullName>
    <active>true</active>
    <label>Payroll</label>
</RecordType>